code/codeforanalyzingkcwislacslenses_/ppxf_kinematics_SLACS_lenses/nohup_output/.ipynb_checkpoints/nohup_plot_datacubes_090222-checkpoint.txt
  File "plot_cropped_datacubes.py", line 33
    norm = simple_norm(np.nansum(hdu[0].data, axis=0), 'sqrt')
    ^
IndentationError: unexpected indent
